added methods to get cart and delete items from it
